--- a/.golangci.yml
+++ b/.golangci.yml
@@ -63,6 +63,9 @@ issues:
       linters:
         - deadcode
         - staticcheck
+    - path: _test\\.go
+      linters:
+        - errorlint
     - path: crypto/bn256/
       linters:
         - revive
